pathmind-webapp/frontend/styles/components/observations-table.css
.observations-table {
    padding-top: var(--lumo-space-s);
}
.observations-panel {
    box-sizing: border-box;
    flex: 1 1 19rem;
    line-height: 1;
    padding: 0 var(--lumo-space-s) var(--lumo-space-xxxs);
    border: 1px solid var(--pm-gray-color);
    border-radius: var(--lumo-border-radius);
    overflow-y: auto;
}
.observations-panel vaadin-custom-field {
	--lumo-text-field-size: var(--lumo-space-s);
}
.observations-panel span {
    position: sticky;
    width: 100%;
    top: 0;
    font-size: var(--lumo-font-size-s);
    color: var(--lumo-secondary-text-color);
    background-color: white;
    padding: var(--lumo-space-s) 0;
    border-bottom: 1px solid var(--pm-gray-color-lightest);
    z-index: 1;
}
.observations-table > vaadin-checkbox {
    font-weight: bold;
    color: var(--lumo-primary-color);
}
.observations-table vaadin-checkbox-group vaadin-checkbox {
    margin: var(--lumo-space-xxxs) 0;
}

